# mbta-gtfs-sqlite

./: .gitignore  README.md  archive.py  config.py  ingest.py  pyproject.toml  reader.py  remove_stop_times.py  scratch.py  session.py  summarize.py
.github/: CODEOWNERS
examples/: config.py  shapes_for_route.py
mbta_gtfs_sqlite/: __init__.py  archive.py  build.py  compact.py  config.py  feed.py  ingest.py  reader.py  session.py
mbta_gtfs_sqlite/models/: __init__.py  calendar_attributes.py  feed_info.py  lines.py  route_patterns.py  routes.py  shapes.py  stop_times.py  stops.py  transfers.py  trips.py
mbta_gtfs_sqlite/utils/: indexes.py
models/: base.py  calendar.py  calendar_attributes.py  calendar_dates.py  feed_info.py  lines.py  route_patterns.py  routes.py  shapes.py  stop_times.py  stops.py  transfers.py  trip_summary.py  trips.py
transitmatters_gtfs/: archive.py  ingest.py  reader.py
transitmatters_gtfs/models/: calendar.py  calendar_dates.py  route_patterns.py  stops.py  transfers.py  trips.py
transitmatters_gtfs/utils/: decorators.py
utils/: enum.py  time.py
