[tool.poetry]
name = "mbta-gtfs-sqlite"
version = "0.1.0"
description = "Query the MBTA's static GTFS feeds using sqlite"
authors = ["Ian Reynolds <ireynolds@transitmatters.info>"]
packages = [{include = "mbta_gtfs_sqlite"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
tqdm = "^4.65.0"
SQLAlchemy = "^2.0.7"
boto3 = "^1.26.123"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
