[tool.poetry]
name = "mbta-gtfs-sqlite"
version = "0.9.7"
description = "Query the MBTA's static GTFS feeds using sqlite"
authors = ["Ian Reynolds <ireynolds@transitmatters.info>"]
packages = [{include = "mbta_gtfs_sqlite"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
SQLAlchemy = "^2.0.7"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
